fix: change links

--- a/about.html
+++ b/about.html
@@ -39,8 +39,8 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link" aria-current="page" href="/">Home</a>
-            <a class="nav-link active" href="about.html">About Me</a>
-            <a class="nav-link" href="about.html#contact">Contact Me</a>
+            <a class="nav-link active" href="/about.html">About Me</a>
+            <a class="nav-link" href="/about.html#contact">Contact Me</a>
           </div>
         </div>
       </div>
@@ -58,13 +58,13 @@
       </div>
       <div class="row">
         <div class="col-sm-4">
-          <img src="images/yoga.png" alt="Yoga project" class="img-fluid mb-4 rounded" />
+          <img src="/images/yoga.png" alt="Yoga project" class="img-fluid mb-4 rounded" />
         </div>
         <div class="col-sm-4">
-          <img src="images/weather.png" alt="Weather Application project" class="img-fluid mb-4 rounded" />
+          <img src="/images/weather.png" alt="Weather Application project" class="img-fluid mb-4 rounded" />
         </div>
         <div class="col-sm-4">
-          <img src="images/yogurt.png" alt="Yoghurt Landing Page" class="img-fluid mb-4 rounded" />
+          <img src="/images/yogurt.png" alt="Yoghurt Landing Page" class="img-fluid mb-4 rounded" />
         </div>
       </div>
       <div id="contact" class="text-center mt-5 pb-5">
