--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
               <div class="navbar-nav">
-                <a class="nav-link active" aria-current="page" href="index.html"
+                <a class="nav-link active" aria-current="page" href="/"
                   >Home</a
                 >
                 <a class="nav-link" href="/about.html">About Me</a>
@@ -52,12 +52,12 @@
       <h1 class="text-center">Sasha Balandina</h1>
       <h3 class="text-center">🇺🇦 Front-end developer, based in Ukraine</h3>
       <div class="navigation-links">
-        <a href="about.html#contact" class="primary-link">Contact me</a>
-        <a href="about.html" class="about-link">About me</a>
+        <a href="/about.html#contact" class="primary-link">Contact me</a>
+        <a href="/about.html" class="about-link">About me</a>
       </div>
       <div class="row mt-5">
         <div class="col-md-6">
-          <img src="images/yoga.png" alt="Yoga Project" class="img-fluid rounded d-none d-sm-block" />
+          <img src="/images/yoga.png" alt="Yoga Project" class="img-fluid rounded d-none d-sm-block" />
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">Yoga app</h2>
@@ -86,12 +86,12 @@
           </div>
         </div>
         <div class="col-md-6">
-          <img src="images/weather.png" alt="Weather App Project" class="img-fluid rounded d-none d-sm-block" />
+          <img src="/images/weather.png" alt="Weather App Project" class="img-fluid rounded d-none d-sm-block" />
         </div>
       </div>
       <div class="row mt-5 mb-5">
           <div class="col-md-6">
-           <img src="images/yogurt.png" alt="Yoghurt Landing Page" class="img-fluid rounded d-none d-sm-block">
+           <img src="/images/yogurt.png" alt="Yoghurt Landing Page" class="img-fluid rounded d-none d-sm-block">
           </div>
           <div class="col-md-6 ">
             <h2 class="mb-3">Yogurt app</h2>
